--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         android:theme="@style/Theme.MCEngine"
         tools:targetApi="31">
         <activity
-            android:name=".SetttingsActivity"
+            android:name=".AboutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_setttings"
             android:theme="@style/Theme.MCEngine" />
