--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ android {
         jni.srcDirs = ['src/main/jni']
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     buildFeatures {
         viewBinding true
@@ -62,10 +62,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.5.2'
     implementation 'androidx.navigation:navigation-ui:2.5.2'
-    implementation 'io.github.taoweiji.quickjs:quickjs-android:1.+'
+    implementation 'io.github.taoweiji.quickjs:quickjs-android:1.4.6'
     compileOnly files('libs\\XposedBridgeApi-82.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.guolindev.permissionx:permissionx:1.7.1'
+    implementation 'com.github.inksnow:fileselect:1.0.1'
 }
