--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.2'
     implementation 'androidx.navigation:navigation-ui:2.5.2'
     implementation 'io.github.taoweiji.quickjs:quickjs-android:1.4.6'
-    compileOnly files('libs\\XposedBridgeApi-82.jar')
+    compileOnly files('libs/XposedBridgeApi-82.jar')
+    implementation('com.fasterxml.jackson.core:jackson-core:2.11.1')
+    implementation('com.fasterxml.jackson.core:jackson-annotations:2.11.1')
+    implementation('com.fasterxml.jackson.core:jackson-databind:2.11.1')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
 }
