--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <provider
+            android:name=".permissionProvider"
+            android:authorities="com.taolesi.mcengine.MainActivity"
+            android:grantUriPermissions="true"
+            android:exported="false">
+        </provider>
         <meta-data
             android:name="xposedmodule"
             android:value="true" />
