--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,15 +31,15 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".AboutActivity"
+            android:name=".Activity.AboutActivity"
             android:exported="false" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".Activity.SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_setttings"
             android:theme="@style/Theme.MCEngine" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
